--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/Fonlit/hexlet-js/issues"
   },
-  "homepage": "https://github.com/Fonlit/hexlet-js#readme"
+  "homepage": "https://github.com/Fonlit/hexlet-js#readme",
+  "keywords": [],
+  "dependencies": {
+    "lodash": "^4.17.20"
+  }
 }
